    function GetTransactionID: integer;
    function GetTrInformation(Requests: array of byte): ITrInformation; overload;
    function GetTrInformation(Request: byte): ITrInformation; overload;

   The latter two return the Transaction Information block. The first two extract
   information the Transaction Information block

6. New function TSQLTokeniser.ReadCharacters
   Used internally.

FBINTF Change Log  version          (1.3-2 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100

1. TFBClientAPI.GetProcAddr. Add check for nil reference.

2. IStatement: new methods:
    procedure SetStaleReferenceChecks(Enable:boolean); {default true}
    function GetStaleReferenceChecks: boolean;

   In previous versions, stale reference checks were always enabled. This allows the
   user to disable them on a per statement basis. Note this can risk out-of-date
   statement BLR. See User Guide.

3. IBUtils: TSQLwithNamedParamsTokeniser now recognises a CASE...END block within a
   stored procedure and hence avoids replacing named parameters within a containing
   BEGIN..END block.

4. ISQLParam: using a string value to set an integer field with a scale factor of
   zero is now treated as a special case to avoid the risk of floating point
   rounding errors affecting pure integers.

5. ISQLParam:  Review and tidy-up of SetAsString for numeric types.

6. ISQLParam is now subclassed from IParamMetaData, which provides access to the mutable
   SQL Parameter metadata (methods moved from ISQLParam).

7. ISQLParam: new method
     function getColMetadata: IParamMetaData;
   This instance of IParamMetaData returns the original column metadata which is unmutable.
   Note: ISQLParam metadata can change after a parameter value has been set e.g when
   setting a VARCHAR column to an integer value.

8. IStatement: can now set cursor name when opening a cursor. New overloaded method:
    procedure Prepare(CursorName: AnsiString; aTransaction: ITransaction=nil); overload;
   also IAttachment: