@@ -23,7 +23,6 @@
       <Unit2>
         <Filename Value="Test3.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <TopLine Value="83"/>
         <CursorPos X="83" Y="108"/>
@@ -256,10 +255,11 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="771"/>
-        <CursorPos Y="801"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="26"/>
+        <CursorPos X="20" Y="41"/>
         <UsageCount Value="36"/>
+        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
@@ -284,10 +284,12 @@
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBStatement.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="327"/>
-        <CursorPos X="14" Y="436"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="290"/>
+        <CursorPos Y="301"/>
         <UsageCount Value="52"/>
+        <Loaded Value="True"/>
       </Unit37>
       <Unit38>
         <Filename Value="/usr/share/fpcsrc/rtl/unix/dl.pp"/>
@@ -354,17 +356,19 @@
       </Unit46>
       <Unit47>
         <Filename Value="../client/FBTransaction.pas"/>
-        <EditorIndex Value="-1"/>
+        <EditorIndex Value="2"/>
         <TopLine Value="315"/>
         <CursorPos X="52" Y="322"/>
         <UsageCount Value="11"/>
+        <Loaded Value="True"/>
       </Unit47>
       <Unit48>
         <Filename Value="../client/3.0/FB30Transaction.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="108"/>
-        <CursorPos X="36" Y="123"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="193"/>
+        <CursorPos X="20" Y="218"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
       </Unit48>
       <Unit49>
         <Filename Value="../client/2.5/FB25Transaction.pas"/>
@@ -431,9 +435,9 @@
       </Unit57>
       <Unit58>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1464"/>
-        <CursorPos Y="1483"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="1562"/>
+        <CursorPos X="3" Y="1567"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -441,6 +445,7 @@
           <CursorPos X="59" Y="292"/>
         </ExtraEditor1>
         <UsageCount Value="71"/>
+        <Loaded Value="True"/>
       </Unit58>
       <Unit59>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
@@ -500,9 +505,11 @@
       </Unit66>
       <Unit67>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="-1"/>
-        <CursorPos X="31" Y="23"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="16"/>
+        <CursorPos Y="41"/>
         <UsageCount Value="29"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit67>
       <Unit68>
@@ -998,7 +1005,115 @@
         <UsageCount Value="8"/>
       </Unit136>
     </Units>
-    <JumpHistory HistoryIndex="-1"/>
+    <JumpHistory Count="28" HistoryIndex="27">
+      <Position1>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="63" Column="15" TopLine="42"/>
+      </Position1>
+      <Position2>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="168" Column="35" TopLine="157"/>
+      </Position2>
+      <Position3>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="52" Column="19" TopLine="39"/>
+      </Position3>
+      <Position4>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="102" Column="38" TopLine="102"/>
+      </Position4>
+      <Position5>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+      </Position5>
+      <Position6>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="52" Column="25" TopLine="27"/>
+      </Position6>
+      <Position7>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="102" Column="38" TopLine="77"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="140" Column="19" TopLine="115"/>
+      </Position8>
+      <Position9>
+        <Filename Value="../client/3.0/FB30Transaction.pas"/>
+        <Caret Line="173" Column="20" TopLine="148"/>
+      </Position9>
+      <Position10>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="424" Column="33" TopLine="406"/>
+      </Position10>
+      <Position11>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="113" Column="14" TopLine="99"/>
+      </Position11>
+      <Position12>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="293" Column="19" TopLine="287"/>
+      </Position12>
+      <Position13>
+        <Filename Value="../client/FBStatement.pas"/>
+      </Position13>
+      <Position14>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="69" Column="18" TopLine="44"/>
+      </Position14>
+      <Position15>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="293" Column="19" TopLine="268"/>
+      </Position15>
+      <Position16>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="294" Column="54" TopLine="269"/>
+      </Position16>
+      <Position17>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1477" Column="50" TopLine="1464"/>
+      </Position17>
+      <Position18>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+      </Position18>
+      <Position19>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="271" Column="45" TopLine="271"/>
+      </Position19>
+      <Position20>
+        <Filename Value="../client/FBStatement.pas"/>
+      </Position20>
+      <Position21>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="70" Column="19" TopLine="45"/>
+      </Position21>
+      <Position22>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1346" Column="54" TopLine="1343"/>
+      </Position22>
+      <Position23>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+      </Position23>
+      <Position24>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1350" Column="18" TopLine="1344"/>
+      </Position24>
+      <Position25>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="185" Column="40" TopLine="171"/>
+      </Position25>
+      <Position26>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1350" Column="55" TopLine="1344"/>
+      </Position26>
+      <Position27>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="297" Column="23" TopLine="292"/>
+      </Position27>
+      <Position28>
+        <Filename Value="../client/FBStatement.pas"/>
+        <Caret Line="113" Column="23" TopLine="92"/>
+      </Position28>
+    </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
       <Modes ActiveMode="default"/>
@@ -1019,7 +1134,6 @@
         <Item9 Value="-t 17"/>
         <Item10 Value="-t 16"/>
       </List1>
-      <List2 Name="WorkingDirectory" Type="File" Count="1"/>
     </HistoryLists>
   </ProjectSession>
 </CONFIG>
