@@ -32,6 +32,12 @@ FBINTF Change Log  version          (1.3-3 Build 12889) Sun, 24 Oct 2021 13:49:2
 6. New function TSQLTokeniser.ReadCharacters
    Used internally.
 
+7. IStatement: GetProcessedSQL bug fix. No longer raises and error if SQL contains
+   parameter placeholders instead of named parameters.
+
+8. ITransaction (Firebird 3 and later): An exception raised when freeing an underlying
+   transaction handle is now ignored if Rollback/Commit is called with Force=true
+
 FBINTF Change Log  version          (1.3-2 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
 
 1. TFBClientAPI.GetProcAddr. Add check for nil reference.
